--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "api",
+  "name": "snapchat-clone-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "author": "Alexandre Frigon",
   "license": "MIT",
